Added some functions in "Data Cleaning" section

--- a/Helper Functions.ipynb
+++ b/Helper Functions.ipynb
@@ -60,15 +60,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "def dfsCols(pad, datasetNames, *args):\n",
+    "def datasetsCols(dfList, datasetNames, pad=\"\"):\n",
     "    \"\"\"\n",
     "    Takes dataframes and returns a dataframe (df) with each column having a df's\n",
     "    column names. The \"pad\" is to make sure all lists of columns have \n",
     "    the same length padded out with \"pad\"\n",
     "    Example\n",
     "    pad = \"XX\", datasetNames = [\"cars\", \"planes\"]\n",
-    "    args = [carsDF, planesDF]\n",
+    "    dfList = [carsDF, planesDF]\n",
     "    returned data frame:\n",
     "            cars            planes\n",
     "    0       numOfWheels     numOfWings\n",
@@ -77,12 +76,12 @@
     "    \"\"\"\n",
     "    cols = []\n",
     "    maxArrayLen = 0\n",
-    "    for i, df in enumerate(args):\n",
+    "    for i, df in enumerate(dfList):\n",
     "        cols.append(df.columns.tolist())\n",
     "        maxArrayLen = max(maxArrayLen, len(cols[i]))\n",
     "    \n",
     "    dictCsvs = {}\n",
-    "    for i, df in enumerate(args):\n",
+    "    for i, df in enumerate(dfList):\n",
     "        cols[i] += [pad] * (maxArrayLen - len(cols[i])) #padding the lists to make them have equal lengths \n",
     "        dictCsvs.update({datasetNames[i] : cols[i]})\n",
     "\n",
@@ -104,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def datasetsNulls(pad, nullCol, datasetNames, *args):\n",
+    "def datasetsNulls(dfList, datasetNames, nullCol=\"nulls_\", pad=\"\"):\n",
     "    \"\"\"\n",
     "    Use this when you want to display a column of column names,\n",
     "    then a column of the null values, and repeat that for each dataset.\n",
@@ -113,18 +112,18 @@
     "    cols = []\n",
     "    nulls = []\n",
     "    maxArrayLen = 0\n",
-    "    for i, df in enumerate(args):\n",
+    "    for i, df in enumerate(dfList):\n",
     "        cols.append(df.columns.tolist())\n",
     "        nulls.append(df.isnull().sum().tolist())\n",
     "        maxArrayLen = max(maxArrayLen, len(cols[i]))\n",
     "    \n",
     "    dictCsvs = {}\n",
-    "    for i, df in enumerate(args):\n",
-    "        cols[i] += [pad] * (maxArrayLen - len(cols[i])) # padding the lists to make them have equal lengths \n",
+    "    for i, df in enumerate(dfList):\n",
+    "        cols[i] += [pad] * (maxArrayLen - len(cols[i])) #padding the lists to make them have equal lengths \n",
     "        nulls[i] += [None] *  (maxArrayLen - len(nulls[i]))\n",
     "        dictCsvs[datasetNames[i]] = cols[i]\n",
     "        dictCsvs[nullCol + str(i+1)] = nulls[i]\n",
-    "\n",
+    "    \n",
     "    return pd.DataFrame(dictCsvs)"
    ]
   },
