literally nothing changed

--- a/Startup-Companies.ipynb
+++ b/Startup-Companies.ipynb
@@ -4437,12 +4437,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "id": "c12b718a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#FARAH OR AISHA: see what you can do with the dtypes above ^^"
+    "#AISHA: see what you can do with the dtypes above (except dates, that's on Farah) ^^"
    ]
   },
   {
