--- a/Startup-Companies.ipynb
+++ b/Startup-Companies.ipynb
@@ -4113,11 +4113,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7fe45064",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Ashraf Cell 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c1c77934",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Ashraf Cell 111\n"
+    "#Ashraf Cell 1"
    ]
   },
   {
