--- a/Startup-Companies.ipynb
+++ b/Startup-Companies.ipynb
@@ -4113,6 +4113,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8486a205",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ya mosahhel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7fe45064",
    "metadata": {},
    "outputs": [],
