--- a/Startup-Companies.ipynb
+++ b/Startup-Companies.ipynb
@@ -4107,7 +4107,9 @@
     "#founded_at.. and that's it :] \n",
     "# Suggestion: convert the dates of all the columns that have date values from \"object\" to datetime\n",
     "#       Helpful link: https://pandas.pydata.org/pandas-docs/stable/user_guide/timeseries.html#converting-to-timestamps\n",
-    "# Then, make the founded_at a couple of days before first_funding_at"
+    "# Then, make the founded_at a couple of days before first_funding_at\n",
+    "\n",
+    "#Sincerely No. -Farah :)"
    ]
   },
   {
@@ -5068,6 +5070,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
+   "id": "b0108965",
    "metadata": {},
    "outputs": [
     {
@@ -5364,6 +5367,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6ef31299",
    "metadata": {},
    "source": [
     "test"
