--- a/Startup-Companies.ipynb
+++ b/Startup-Companies.ipynb
@@ -4115,6 +4115,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "141c5991",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#final t2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbe908b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#final t1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8486a205",
    "metadata": {},
    "outputs": [],
@@ -5363,14 +5383,6 @@
     "        compared to the rest of the dataset\n",
     "2.  Do taxes play an important factor in deciding a start-up’s success?\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6ef31299",
-   "metadata": {},
-   "source": [
-    "test"
    ]
   }
  ],
