EXHAUSTED FARAH TESTING

--- a/Startup-Companies.ipynb
+++ b/Startup-Companies.ipynb
@@ -4115,31 +4115,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fa2df21",
+   "id": "c058358c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#AAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "141c5991",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#final t2wait\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dbe908b2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#final t1"
+    "#Wallah t3ebt"
    ]
   },
   {
@@ -5393,6 +5373,14 @@
     "        compared to the rest of the dataset\n",
     "2.  Do taxes play an important factor in deciding a start-up’s success?\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ef31299",
+   "metadata": {},
+   "source": [
+    "test"
    ]
   }
  ],
