--- a/Startup-Companies.ipynb
+++ b/Startup-Companies.ipynb
@@ -4115,6 +4115,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e7102d1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#wlla makaaan, 3laaa baly ya hawaaaa (7aga kda, ana msm3t4 el 28nya b2aly kter don't judge plz)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c058358c",
    "metadata": {},
    "outputs": [],
