--- a/Startup-Companies.ipynb
+++ b/Startup-Companies.ipynb
@@ -4115,6 +4115,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "74775b7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#FARAH IS FREAKIN ADDING CELL #1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3cdc855",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#FARAH IS FREAKIN ADDING CELL #2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e7102d1c",
    "metadata": {},
    "outputs": [],
