--- a/Startup-Companies.ipynb
+++ b/Startup-Companies.ipynb
@@ -4135,6 +4135,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "37adcfe4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#FARAH IS FREAKIN ADDING CELL #3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e7102d1c",
    "metadata": {},
    "outputs": [],
