--- a/Startup-Companies.ipynb
+++ b/Startup-Companies.ipynb
@@ -4145,6 +4145,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "16dbfc71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#billie jean... is nottt myyyy lover, she's just a Heeeehe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c058358c",
    "metadata": {},
    "outputs": [],
