--- a/Startup-Companies.ipynb
+++ b/Startup-Companies.ipynb
@@ -4155,6 +4155,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e5e51657",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Just beat it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "16dbfc71",
    "metadata": {},
    "outputs": [],
