JUST BEAT IT MAN

--- a/Startup-Companies.ipynb
+++ b/Startup-Companies.ipynb
@@ -4159,7 +4159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Just beat it."
+    "#Just beat it. No one wants to be deated."
    ]
   },
   {
