Finally understood merges in ipynb (sol: separator cells)

--- a/Startup-Companies.ipynb
+++ b/Startup-Companies.ipynb
@@ -4093,7 +4093,7 @@
    "id": "3f33939d",
    "metadata": {},
    "source": [
-    "[SAY WHAT YOU WILL DO HERE:]"
+    "[SAY WHAT YOU WILL DO HERE FARAH:]"
    ]
   },
   {
@@ -4115,131 +4115,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74775b7d",
+   "id": "2d4a5fac",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#FARAH IS FREAKIN ADDING CELL #1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f3cdc855",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#FARAH IS FREAKIN ADDING CELL #2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "37adcfe4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#FARAH IS FREAKIN ADDING CELL #3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e7102d1c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#wlla makaaan, 3laaa baly ya hawaaaa (7aga kda, ana msm3t4 el 28nya b2aly kter don't judge plz)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e5e51657",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Just beat it. No one wants to be deated."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16dbfc71",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#billie jean... is nottt myyyy lover, she's just a Heeeehe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "37d1ae7a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#theeee way you makkee mee feeel (the way you make me feel), you make mee feeeeel soo HEeeeeeeHE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c058358c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Wallah t3ebt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8486a205",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#ya mosahhel2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7fe45064",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Ashraf Cell 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c1c77934",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Ashraf Cell 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "33dff62a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Ashraf Cell 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "379921fa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Ashraf Cell 3"
+    "#farah stop point here"
    ]
   },
   {
@@ -4575,6 +4455,16 @@
    "outputs": [],
    "source": [
     "#AISHA: see what you can do with the dtypes above (except dates, that's on Farah) ^^"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "efa614b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Aisha stop"
    ]
   },
   {
