--- a/Startup-Companies.ipynb
+++ b/Startup-Companies.ipynb
@@ -5034,12 +5034,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 3,
    "id": "c12b718a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "testing something here\n"
+     ]
+    }
+   ],
    "source": [
-    "#AISHA: see what you can do with the dtypes above (except dates, that's on Farah) ^^"
+    "#AISHA: see what you can do with the dtypes above (except dates, that's on Farah) ^^\n",
+    "print(\"testing something here\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "909be89e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Aisha is angry\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Aisha is angry\")"
    ]
   },
   {
