Ashraf testing through Aisha testing (totally makes sense)

--- a/Startup-Companies.ipynb
+++ b/Startup-Companies.ipynb
@@ -5047,13 +5047,12 @@
     }
    ],
    "source": [
-    "#AISHA: see what you can do with the dtypes above (except dates, that's on Farah) ^^\n",
-    "print(\"testing something here\")"
+    "#AISHA: see what you can do with the dtypes above (except dates, that's on Farah) ^^"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "909be89e",
    "metadata": {},
    "outputs": [
@@ -5061,12 +5060,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Aisha is angry\n"
+      "Aisha is happy ^^\n"
      ]
     }
    ],
    "source": [
-    "print(\"Aisha is angry\")"
+    "print(\"Aisha is happy ^^\")"
    ]
   },
   {
