--- a/Startup-Companies.ipynb
+++ b/Startup-Companies.ipynb
@@ -3327,6 +3327,84 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0ed10657",
+   "metadata": {},
+   "source": [
+    "We are currently interested in 'founded_at', 'first_funding_at' and 'last_funding_at'. Before doing operations on dates, they need to be converted first from 'Object' to 'DateTime'."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed1eddb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "companies['founded_at'] =pd.to_datetime(companies['founded_at'], errors = 'coerce')\n",
+    "companies['first_funding_at'] =pd.to_datetime(companies['first_funding_at'], errors = 'coerce')\n",
+    "companies['last_funding_at'] =pd.to_datetime(companies['last_funding_at'], errors = 'coerce')\n",
+    "companies.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f20f55f",
+   "metadata": {},
+   "source": [
+    "After converting, we need to impute the missing values on the dates of when those companies where founded at. So, this will be done by first creating a new column that calculates how long it took to get the first funing. This will be done by subtracting the date of the founding from the date of the first funding."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78930d89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "companies['time_before_first_fund'] = companies['first_funding_at'] - companies['founded_at']\n",
+    "companies['time_before_first_fund']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6819874",
+   "metadata": {},
+   "source": [
+    "Now we need to calculate the mean of the time before the first funding and impute the missing values with this average."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c622f6c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "companies['time_before_first_fund'].fillna(companies['time_before_first_fund'].mean(), inplace = True)\n",
+    "companies['time_before_first_fund']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "092e391e",
+   "metadata": {},
+   "source": [
+    "After calculating the mean and filling the nulls with it, now we can impute the missing dates in the 'founded_at' column by subtracting the time before first funding from the first funding date."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac82a773",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "companies['founded_at'].fillna(companies['first_funding_at'] - companies['time_before_first_fund'], inplace = True)\n",
+    "companies['founded_at']"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "id": "2d4a5fac",
