Added some web scraping steps, about to multithread

--- a/Startup-Companies.ipynb
+++ b/Startup-Companies.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "id": "a03a2c46",
    "metadata": {
     "collapsed": true
@@ -163,7 +163,7 @@
        " 'wide_to_long']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,6 +177,9 @@
     "import pandas as pd\n",
     "# Import NumPy under the abbreviation 'np'\n",
     "import numpy as np\n",
+    "# Libraries to aid in web scraping\n",
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
     "\n",
     "#Notes for efficienccy:\n",
     "#shift + tab when cursor is in arguments to bring up its documentation\n",
@@ -3927,9 +3930,96 @@
    "id": "8d8d74c3",
    "metadata": {},
    "source": [
-    "A way to impute country codes is to do the following:\n",
+    "Steps to impute country codes is to do the following for all missing values:\n",
     "1. check the company's permalink\n",
-    "2. find HTML that contains "
+    "2. find HTML that contains the headquarters location (country and city)\n",
+    "3. scrape country and convert it to country code using `pycountry.countries`\n",
+    "4. scrape city and impute it in `company_city`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0cf5dfc",
+   "metadata": {},
+   "source": [
+    "Step 1: appending \"https://www.crunchbase.com\" to each permalink <br>\n",
+    "to be able to access the company's webpage on crunchbase. <br>\n",
+    "However, since the new permalink will be much longer (thus slower for accessing as a dataset's primary index) <br>\n",
+    "we'll create a function that appends the string as a prefix and that will be accessed throughout the notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "94324c2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##################################### function \"visitLink()\" used throughout the notebook #####################################\n",
+    "visitLink = lambda s : \"https://www.crunchbase.com\" + s"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3621c4b5",
+   "metadata": {},
+   "source": [
+    "Step 2: Finding location of country and city on the webpage:\n",
+    "let's check company [004](https://www.crunchbase.com/organization/004)'s webpage for example: <Br>\n",
+    "<img src=\"Phase 1/countryAndCityInCrunchbase.png\" width=400 height=300 />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef8d7cf8",
+   "metadata": {},
+   "source": [
+    "By inspecting the HTML, we notice 4 instances of the class <br>\n",
+    "`component--field-formatter field-type-identifier-multi` (in a `span` element),<br>and the data that we want\n",
+    "is always the first instance: <br>\n",
+    "<img src=\"Phase 1/countryAndCityLocationInHTML.png\" width=700 height=500 />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38c8dcd3",
+   "metadata": {},
+   "source": [
+    "Step 3: scrape that info using `requests` and `bs4` libraries: <br>\n",
+    "(Note, we're using `threading.Thread` here to increase performance by scraping in multithreads)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4be87753",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "4b006652",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from threading import Thread\n",
+    "def imputeFromLinks(df, linkCol, colToImpute, linkPrefix = \"\"):\n",
+    "    links = df[df[colToImpute].isnull()][[linkCol]] # leave it as a series (i.e. don't \".tolist()\") to impute it in fillna() below\n",
+    "    results = [Thread(target=fetchCountry, args=(linkPrefix+link)) for link in links]\n",
+    "    "
    ]
   },
   {
