scraped one website using linkedin!!!!!

--- a/Startup-Companies.ipynb
+++ b/Startup-Companies.ipynb
@@ -3787,16 +3787,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'USA'"
+       "('Egypt', 'EGY')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3805,60 +3805,189 @@
     "from geopy.geocoders import Nominatim\n",
     "import pycountry\n",
     "geolocator = Nominatim(user_agent=\"ashraf196280@bue.edu.eg\")\n",
-    "location = geolocator.geocode(\"San Francisco\",language=\"en\")\n",
+    "location = geolocator.geocode(\"Alexandria\",language=\"en\")\n",
     "country = location.address.split(', ')[-1]\n",
     "alpha3Code = pycountry.countries.get(name=country).alpha_3\n",
-    "alpha3Code"
+    "country, alpha3Code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "9276ad2d",
+   "execution_count": null,
+   "id": "dda751ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from linkedin_scraper import Company, actions\n",
+    "from selenium import webdriver\n",
+    "\n",
+    "options=webdriver.ChromeOptions()\n",
+    "options.add_argument('--incognito')\n",
+    "options.add_argument('--headless')\n",
+    "driver=webdriver.Chrome(options=options)\n",
+    "driver.get('https://www.linkedin.com/uas/login')\n",
+    "\n",
+    "username = driver.find_element_by_id('username')\n",
+    "username.send_keys('ashraf196280@bue.edu.eg')\n",
+    "password = driver.find_element_by_id('password')\n",
+    "password.send_keys('0LinkedIn0')\n",
+    "log_in_button = driver.find_element_by_class_name('from__button--floating')\n",
+    "log_in_button.click()\n",
+    "\n",
+    "urls=['https://www.linkedin.com/company/10tracks/about/']\n",
+    "for url in urls:\n",
+    "    driver.get(url)\n",
+    "    time.sleep(3)\n",
+    "    soup = BeautifulSoup(driver.page_source, 'html.parser')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eee3a6c2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'DEU'"
+       "['\\n',\n",
+       " '\\n          Website\\n        ',\n",
+       " '\\n',\n",
+       " '\\n\\n\\n              http://10tracks.com\\n            \\n\\n',\n",
+       " '\\n',\n",
+       " '',\n",
+       " '\\n',\n",
+       " '\\n            Industry\\n          ',\n",
+       " '\\n',\n",
+       " '\\n            Internet Publishing\\n          ',\n",
+       " '\\n',\n",
+       " '\\n          Company size\\n        ',\n",
+       " '\\n',\n",
+       " '\\n            2-10 employees\\n        ',\n",
+       " '\\n',\n",
+       " '\\n            3 on LinkedIn\\n            \\n \\n\\n\\n\\n    Includes members with current employer listed as 10tracks, including part-time roles.\\n\\n\\n\\n',\n",
+       " '\\n',\n",
+       " '\\n            Headquarters\\n          ',\n",
+       " '\\n',\n",
+       " '\\n            Moscow, Moscow\\n          ',\n",
+       " '\\n',\n",
+       " '',\n",
+       " '\\n',\n",
+       " '',\n",
+       " '\\n',\n",
+       " '',\n",
+       " ' ']"
       ]
      },
-     "execution_count": 9,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "import pycountry\n",
-    "page = requests.get(\"https://www.crunchbase.com/organization/004\", headers=headers).text\n",
-    "soup = BeautifulSoup(page, \"html.parser\")\n",
-    "geoLoc = soup.find(\"span\", {\"class\": \"component--field-formatter field-type-identifier-multi\"})\n",
-    "country = geoLoc.find_all(\"a\")[-1].text.strip().lower() #\"strip()\" is because countries have leading spaces. E.g: \" Germany\"\n",
-    "alpha3Code = pycountry.countries.get(name=country).alpha_3\n",
-    "alpha3Code"
+    "dl = soup.find('div', 'mb6').find('dl')\n",
+    "nms = []\n",
+    "for tag in dl:\n",
+    "    txt = tag.text\n",
+    "    nms.append(txt)\n",
+    "nms"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "93e89de0",
+   "execution_count": null,
+   "id": "6e0d5d27",
    "metadata": {},
    "outputs": [],
    "source": [
-    "options = uc.ChromeOptions()\n",
-    "options.add_argument('--headless')\n",
-    "driver = uc.Chrome(options=options)\n",
-    "driver.get(\"https://www.linkedin.com/\")\n",
-    "time.sleep(3)\n",
-    "cookies_dict = {}\n",
-    "for c in driver.get_cookies():\n",
-    "    cookies_dict[c['name']] = c['value']\n",
-    "driver.close()"
+    "dl = soup.find('div', 'mb6').find('dl')\n",
+    "keys = []\n",
+    "values = []\n",
+    "for tag in dl.find_all('dt'):\n",
+    "    txt = tag.text.strip()\n",
+    "    if (txt != ''):\n",
+    "        keys.append(txt)\n",
+    "for tag in dl.find_all('dd'):\n",
+    "    txt = tag.text.strip()\n",
+    "    if (txt != ''):\n",
+    "        values.append(txt)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
+   "id": "dd9cdd1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(['Website', 'Industry', 'Company size', 'Headquarters'],\n",
+       " ['http://10tracks.com',\n",
+       "  'Internet Publishing',\n",
+       "  '2-10 employees',\n",
+       "  '3 on LinkedIn\\n            \\n \\n\\n\\n\\n    Includes members with current employer listed as 10tracks, including part-time roles.',\n",
+       "  'Moscow, Moscow'])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "keys, values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04d5168a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['http://10tracks.com',\n",
+       " 'Internet Publishing',\n",
+       " '2-10 employees',\n",
+       " 'Moscow, Moscow']"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "values = [txt for txt in values if \"Includes\" not in txt]\n",
+    "values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "314072a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Website': 'http://10tracks.com',\n",
+       " 'Industry': 'Internet Publishing',\n",
+       " 'Company size': '2-10 employees',\n",
+       " 'Headquarters': 'Moscow, Moscow'}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "linkedinDict = dict(zip(keys, values))\n",
+    "linkedinDict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
    "id": "4be87753",
    "metadata": {},
    "outputs": [],
@@ -3873,15 +4002,27 @@
     "\n",
     "def fetchCountry(idx, link):\n",
     "    try:\n",
-    "        driver = uc.Chrome()\n",
+    "        options=webdriver.ChromeOptions()\n",
+    "        options.add_argument('--incognito')\n",
+    "        options.add_argument('--headless')\n",
+    "        options.add_argument('log-level=1')\n",
+    "        driver=webdriver.Chrome(options=options)\n",
+    "        driver.get('https://www.linkedin.com/uas/login')\n",
+    "\n",
+    "        username = driver.find_element_by_id('username')\n",
+    "        username.send_keys('ashraf196280@bue.edu.eg')\n",
+    "        password = driver.find_element_by_id('password')\n",
+    "        password.send_keys('0LinkedIn0')\n",
+    "        log_in_button = driver.find_element_by_class_name('from__button--floating')\n",
+    "        log_in_button.click()\n",
+    "        time.sleep(1)\n",
     "        driver.get(link)\n",
-    "        print(1)\n",
+    "        time.sleep(2)\n",
     "        soup = BeautifulSoup(driver.page_source, \"html.parser\")\n",
-    "        print(1)\n",
-    "        print(soup.prettify())\n",
-    "        print(1)\n",
-    "        city = soup.find_all(\"div\", \"org-top-card-summary-info-list__info-item\")[1].text.split(',')[0] # eg: \"Cupertino, California\" will be [\"Cupertino\", \"California\"], so \"Cupertino\" will be returned\n",
-    "        #Note that maybe some linkedin webpage don't have that class name, so in that case we'll also return \"missing\"\n",
+    "        sectionUnderName = soup.find_all(\"div\", \"org-top-card-summary-info-list__info-item\")\n",
+    "        if (len(sectionUnderName) <= 2):\n",
+    "            raise #Note that  some linkedin webpage don't have the headquarters ection, so in that case we'll also return \"missing\"\n",
+    "        \n",
     "    except:\n",
     "        print(\"missing\")\n",
     "        lock.acquire()\n",
@@ -3889,19 +4030,20 @@
     "        lock.release()\n",
     "        return\n",
     "\n",
+    "    city = sectionUnderName[1].text.split(',')[0] # eg: \"Cupertino, California\" will be [\"Cupertino\", \"California\"], so \"Cupertino\" will be returned\n",
     "    geolocator = Nominatim(user_agent=\"ashraf196280@bue.edu.eg\")\n",
     "    location = geolocator.geocode(city, language=\"en\")\n",
     "    country = location.address.split(', ')[-1]\n",
     "    alpha3Code = pycountry.countries.get(name=country).alpha_3\n",
     "    print(alpha3Code)\n",
     "    lock.acquire()\n",
-    "    companies.at[idx, 'company_country_code'] = alpha3Code # For later uses: \"companies\" will be replaced by your \"global\" dataframe\n",
+    "    #companies.at[idx, 'company_country_code'] = alpha3Code # For later uses: \"companies\" will be replaced by your \"global\" dataframe\n",
     "    lock.release()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 114,
    "id": "4b006652",
    "metadata": {},
    "outputs": [],
@@ -3909,10 +4051,10 @@
     "from threading import Thread\n",
     "def imputeFromLinks(df, colToSuffixIntoURL, colToImpute, linkPrefix = \"\"):\n",
     "    linkss = df[df[colToImpute].isnull()][[colToSuffixIntoURL]].squeeze() # \"squeeze()\" converts df to series\n",
-    "    links = linkss[0:1]\n",
+    "    links = linkss[0:5]\n",
     "    threads = []\n",
     "    for tup in links.iteritems(): # tup[0] --> index, tup[1] --> url (i.e. link)\n",
-    "        th = Thread(target=fetchCountry, args=(tup[0], linkPrefix + 'viap'.replace(\" \", \"\"))) #making sure company name doesn't have spaces when suffixed into the url\n",
+    "        th = Thread(target=fetchCountry, args=(tup[0], linkPrefix + tup[1].replace(\" \", \"\"))) #making sure company name doesn't have spaces when suffixed into the url\n",
     "        threads.append(th)\n",
     "        th.start()\n",
     "    for th in threads:\n",
@@ -3921,47 +4063,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 115,
    "id": "aa93edfc",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Gamma\\AppData\\Local\\Temp\\ipykernel_39004\\3857070051.py:18: DeprecationWarning: find_element_by_* commands are deprecated. Please use find_element() instead\n",
+      "  username = driver.find_element_by_id('username')\n",
+      "C:\\Users\\Gamma\\AppData\\Local\\Temp\\ipykernel_39004\\3857070051.py:20: DeprecationWarning: find_element_by_* commands are deprecated. Please use find_element() instead\n",
+      "  password = driver.find_element_by_id('password')\n",
+      "C:\\Users\\Gamma\\AppData\\Local\\Temp\\ipykernel_39004\\3857070051.py:22: DeprecationWarning: find_element_by_class_name is deprecated. Please use find_element(by=By.CLASS_NAME, value=name) instead\n",
+      "  log_in_button = driver.find_element_by_class_name('from__button--floating')\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "1\n",
-      "<html class=\"artdeco\" lang=\"en-US\">\n",
-      " <head>\n",
-      "  <meta content=\"IE=EDGE\" http-equiv=\"X-UA-Compatible\"/>\n",
-      "  <meta charset=\"utf-8\"/>\n",
-      "  <meta content=\"width=device-width, initial-scale=1\" name=\"viewport\"/>\n",
-      "  <meta content=\"https://static-exp1.licdn.com/sc/h/6bja66gymvrvqrp5m6btz3vkz\" id=\"artdeco/static/images/icons.svg\" name=\"asset-url\"/>\n",
-      "  <title>\n",
-      "   Security Verification | LinkedIn\n",
-      "  </title>\n",
-      "  <link href=\"https://static-exp1.licdn.com/sc/h/9lb1g1kp916tat669q9r5g2kz\" rel=\"shortcut icon\"/>\n",
-      "  <link href=\"https://static-exp1.licdn.com/sc/h/1exdo4axa6eaw1jioxh1vu4fj\" rel=\"apple-touch-icon\"/>\n",
-      "  <link href=\"https://static-exp1.licdn.com/sc/h/55ggxxse8uyjdh2x78ht3j40q\" rel=\"apple-touch-icon-precomposed\"/>\n",
-      "  <link href=\"https://static-exp1.licdn.com/sc/h/1exdo4axa6eaw1jioxh1vu4fj\" rel=\"apple-touch-icon-precomposed\" sizes=\"57x57\"/>\n",
-      "  <link href=\"https://static-exp1.licdn.com/sc/h/55ggxxse8uyjdh2x78ht3j40q\" rel=\"apple-touch-icon-precomposed\" sizes=\"144x144\"/>\n",
-      "  <meta content=\"AAXbX9HfJbAG+MwlOHmarA==\" name=\"treeID\"/>\n",
-      "  <meta content=\"d_checkpoint_ch_captchaV2Challenge\" name=\"pageKey\"/>\n",
-      "  <meta content=\"urn:li:page:d_checkpoint_ch_captchaV2Challenge;WF2YfHuAS8qTQtFYeHA0hA==\" name=\"pageInstance\"/>\n",
-      "  <meta content=\"checkpoint-frontend\" name=\"appName\"/>\n",
-      "  <link href=\"https://static-exp1.licdn.com/sc/h/b49i6jboqpekp8dj6gmp7on46\" rel=\"stylesheet\"/>\n",
-      "  <link as=\"script\" href=\"https://static-exp1.licdn.com/sc/h/dz6wk4o93mwzoh0t6zsx73kzr\" rel=\"preload\"/>\n",
-      "  <script charset=\"UTF-8\" src=\"https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=F1XaIxAJYI_UYJVXLcAWaaGsbaLRmKDQn6nuwvY95z5fJgHjrnWydzbIOgYUv64SKL-jMPsC6T9Wcx_zwhhgnwh1BGO91NgymToC9EaPsex-TTeAe2EgOLWrdfO1z6Xi7JvWCbCR4m95dVUS6LwDx8R0p-zTbYiLKtxfvRy9a4jb287quvGwgYOVyv4Xn5UOkUAgca-BdlfdpxD1IbAc7j_PtUZJb_9aZWKNhXNp-8g\" type=\"text/javascript\">\n",
-      "  </script>\n",
-      " </head>\n",
-      "</html>\n",
-      "1\n",
-      "missing\n"
+      "<div class=\"org-top-card-summary-info-list__info-item\">\n",
+      " 37 followers\n",
+      "</div>\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "imputeFromLinks(companies, \"company_name\", \"company_country_code\", \"https://www.linkedin.com/company/\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "55af66d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2                  (THE) ONE of THEM,Inc.\n",
+       "21    Beijing 1000CHI Software Technology\n",
+       "35                           Beans Around\n",
+       "39                               10tracks\n",
+       "45                      115 network disks\n",
+       "Name: company_name, dtype: object"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "linkss = companies[companies['company_country_code'].isnull()][['company_name']].squeeze()\n",
+    "linkss[0:5]"
    ]
   },
   {
